--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@ document.querySelectorAll('.product-card').forEach((card) => {
 
             font-size: 1.9em;
             font-weight: bold;
-            color: lightgreen;
+            color: green;
             text-shadow: 1px 1px 0px rgb(0, 32, 0);
             text-decoration: underline green;
             margin-top: 140px;
