--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             border: none;
             cursor: pointer;
             border: 0px solid white !important;
-            height: 60px;#
+            height: 60px;
         }
         #carritoBoton img {
             width: 40px !important;
@@ -528,7 +528,6 @@
     gap: 0.5em;
     padding: 0.6em 1em;
     border: none;
-    border-radius: 12px;
     background: linear-gradient(135deg, #d32f2f, #800020); /* rojo a rojo vino */
     color: white;
     font-weight: bold;
@@ -547,7 +546,6 @@
   #carritoBoton img {
     width: 40px;
     height: auto;
-    border-radius: 6px;
   border: 0px !important;
     background-color: rgba(255, 255, 255, 0.1);
     padding: 2px;
@@ -569,7 +567,7 @@
     <div id="header-top" style="height: 0px;">
         <button id="carritoBoton" onclick="openCart()">
             <span></span>
-            <img style="border-radius: 30%;  background-color: rgb(172, 0, 0); border: black solid 2px; width: 60px; padding-right: 5px;" src="https://i.ibb.co/4ZsxzrkD/carritopng.png" alt="Carrito">
+            <img style="background-color: rgb(172, 0, 0); border: black solid 2px; width: 60px; padding-right: 5px;" src="https://i.ibb.co/4ZsxzrkD/carritopng.png" alt="Carrito">
             <span id="contador">0</span>
         </button>
     </div>
@@ -2193,7 +2191,6 @@ header {
 }
 
 #carritoBoton img {
-    border-radius: 50%;
     background-color: rgb(250, 81, 250)  !important;
     border: 2px solid #fff;
     width: 50px;
