--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,8 @@ document.querySelectorAll('.product-card').forEach((card) => {
    <section id="BEBIDAS" class="seccion"></section>
 <h1 class="titulo-categoria">BEBIDAS</h1>
 
-        <div class="product-card">
+
+<div class="product-card">
         <div class="product-image-section">
             <img src="" alt="Batido Nutricional (Variedad de sabores)">
         </div>
@@ -1138,11 +1139,9 @@ document.querySelectorAll('.product-card').forEach((card) => {
             <h3>Batido Nutricional (Variedad de sabores)</h3>
             <p class="product-description"> </p>
             <p class="product-price">$4.000</p>
-            <button class="add-to-cart-btn" onclick="addToCart('Batido Nutricional (Variedad de sabores)')">+</button>
+            <button class="add-to-cart-btn" onclick="addToCart('Protein Drink Mix Vainilla')">+</button>
         </div>
-    </div>
-
-
+    </div>
 
 <div class="product-card">
         <div class="product-image-section">
@@ -1383,7 +1382,7 @@ position: absolute;
             transition: background-color 0.3s ease;
             position: absolute;
             bottom: 21px;
-            right: 23px;
+            right: 0px;
         }
         
         .add-to-cart-btn:hover {
